FFI - Use an implicit memory session
This should mean that allocation is done with a default Cleaner linked to the session which should release the allocated segments via GC. We seem to be getting away with it in jmh GetBenchmark.java